--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
 <footer class="bg-black text-white text-center py-3">
   <p class="mb-0">© 2025 GymX Fitness Club</p>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
