--- a/trainers.html
+++ b/trainers.html
@@ -41,8 +41,8 @@
       </div>
 
       <div class="col-md-4 text-center">
-        <img src="img/rakshita.jpg" class="trainer-img">
-        <h4 class="mt-3">Rakshita Giri</h4>
+        <img src="img/shiv.jpg" class="trainer-img">
+        <h4 class="mt-3">Shivender Kanwar</h4>
         <p>Zumba Expert</p>
       </div>
 
